--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     <img src="./images/startup.png" alt="" />
     <img src="./images/astronaut.png" alt="" />
     <img src="./images/solar-system.png" alt="" /> -->
-    <img
+    <!-- <img
       class="meal"
       src="./images/meal.jpg"
       alt="A bowl of salmon and curry."
-    />
+    /> -->
     <img
       class="meal"
       src="./images/meal.jpg"
       alt="A bowl of salmon and curry."
       srcset="
-        ./images/meal.jpg    1x,
-        ./images/meal@2x.jpg 2x,
-        ./images/meal@3x.jpg 3x
+        ./images/meal.jpg     400w,
+        ./images/meal@2x.jpg  800w,
+        ./images/meal@3x.jpg 1200w
       "
     />
 
