more break points made with https://www.responsivebreakpoints.com/

--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
       src="./images/meal.jpg"
       alt="A bowl of salmon and curry."
       srcset="
-        ./images/meal.jpg     400w,
-        ./images/meal@2x.jpg  800w,
-        ./images/meal@3x.jpg 1200w
+        ./images/meal.jpg     200w,
+        ./images/meal@2x.jpg  530w,
+        ./images/meal@3x.jpg  919w,
+        ./images/meal@4x.jpg 1076w,
+        ./images/meal@5x.jpg 1200w
       "
+      sizes="
+      (max-width: 1200px) 100vw, 1200px"
     />
 
     <!-- <span class="bg-astronaut"></span>
